{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 148,
  "lineage": "cecbcb10-328f-4f65-cd9f-f84c5f3b5c80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:loadbalancer/app/zemoga-webapp-production-alb/87e2b2d13668a780",
            "arn_suffix": "app/zemoga-webapp-production-alb/87e2b2d13668a780",
            "dns_name": "zemoga-webapp-production-alb-2007209687.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:587350930704:loadbalancer/app/zemoga-webapp-production-alb/87e2b2d13668a780",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zemoga-webapp-production-alb",
            "security_groups": [
              "sg-03dbd088a1473d5b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0322842ba6c97be12"
              },
              {
                "subnet_id": "subnet-0f6bb4f06487dac7b"
              }
            ],
            "subnets": [
              "subnet-0322842ba6c97be12",
              "subnet-0f6bb4f06487dac7b"
            ],
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-alb"
            },
            "vpc_id": "vpc-0f759434bad4f2000",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:internet-gateway/igw-01094ddacbdf201dc",
            "id": "igw-01094ddacbdf201dc",
            "owner_id": "587350930704",
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-igw"
            },
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:listener/app/zemoga-webapp-production-alb/87e2b2d13668a780/efaaa5feed54ebcc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:targetgroup/zemoga-webapp-production-tg/60d01dcb171dbae7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587350930704:listener/app/zemoga-webapp-production-alb/87e2b2d13668a780/efaaa5feed54ebcc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:loadbalancer/app/zemoga-webapp-production-alb/87e2b2d13668a780",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.aws-vpc",
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:listener/app/zemoga-webapp-production-alb/87e2b2d13668a780/04d11781825c97eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "fixed response",
                    "status_code": "503"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587350930704:listener/app/zemoga-webapp-production-alb/87e2b2d13668a780/04d11781825c97eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:loadbalancer/app/zemoga-webapp-production-alb/87e2b2d13668a780",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:listener/app/zemoga-webapp-production-alb/87e2b2d13668a780/334f92ff9f07e1fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "fixed response",
                    "status_code": "503"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587350930704:listener/app/zemoga-webapp-production-alb/87e2b2d13668a780/334f92ff9f07e1fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:loadbalancer/app/zemoga-webapp-production-alb/87e2b2d13668a780",
            "port": 8088,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc",
            "aws_alb.application_load_balancer",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587350930704:targetgroup/zemoga-webapp-production-tg/60d01dcb171dbae7",
            "arn_suffix": "targetgroup/zemoga-webapp-production-tg/60d01dcb171dbae7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587350930704:targetgroup/zemoga-webapp-production-tg/60d01dcb171dbae7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "zemoga-webapp-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01094ddacbdf201dc",
            "id": "r-rtb-02e43bb4cfe0bc3d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e43bb4cfe0bc3d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc",
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02e43bb4cfe0bc3d4",
            "owner_id": "587350930704",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01094ddacbdf201dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-routing-table-public"
            },
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068ed565a90bd52bf",
            "route_table_id": "rtb-02e43bb4cfe0bc3d4",
            "subnet_id": "subnet-0f6bb4f06487dac7b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1d708b55abf779",
            "route_table_id": "rtb-02e43bb4cfe0bc3d4",
            "subnet_id": "subnet-0322842ba6c97be12"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:security-group/sg-03dbd088a1473d5b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dbd088a1473d5b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8088,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220506185323313500000002",
            "name_prefix": null,
            "owner_id": "587350930704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:security-group/sg-08b3287db400ee2fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b3287db400ee2fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03dbd088a1473d5b4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220506185329027400000003",
            "name_prefix": null,
            "owner_id": "587350930704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:subnet/subnet-0e9ee9360226ec4d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-0e9ee9360226ec4d3",
            "map_public_ip_on_launch": false,
            "owner_id": "587350930704",
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-private-subnet-1"
            },
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:subnet/subnet-043d304a4bfde6ade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-043d304a4bfde6ade",
            "map_public_ip_on_launch": false,
            "owner_id": "587350930704",
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-private-subnet-2"
            },
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:subnet/subnet-0f6bb4f06487dac7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.100.0/24",
            "id": "subnet-0f6bb4f06487dac7b",
            "map_public_ip_on_launch": true,
            "owner_id": "587350930704",
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-public-subnet-1"
            },
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:subnet/subnet-0322842ba6c97be12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.101.0/24",
            "id": "subnet-0322842ba6c97be12",
            "map_public_ip_on_launch": true,
            "owner_id": "587350930704",
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-public-subnet-2"
            },
            "vpc_id": "vpc-0f759434bad4f2000"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587350930704:vpc/vpc-0f759434bad4f2000",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03d09255e58e692d3",
            "default_route_table_id": "rtb-0afc4bbedd81cc9be",
            "default_security_group_id": "sg-07cad39476d4b4582",
            "dhcp_options_id": "dopt-0a43a7a3c03fe586f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f759434bad4f2000",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0afc4bbedd81cc9be",
            "owner_id": "587350930704",
            "tags": {
              "Environment": "production",
              "Name": "zemoga-webapp-vpc"
            }
          }
        }
      ]
    }
  ]
}